tests/ui/for-loop-while/iter-from-mac-call.stderr
error[E0277]: `i32` is not an iterator
  --> $DIR/iter-from-mac-call.rs:10:18
   |
LL |     for _item in deref!(x) {}
   |                  ^^^^^^^^^ `i32` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `i32`
   = note: if you want to iterate between `start` until a value `end`, use the exclusive range syntax `start..end` or the inclusive range syntax `start..=end`
   = note: required for `i32` to implement `IntoIterator`

error[E0308]: mismatched types
  --> $DIR/iter-from-mac-call.rs:23:9
   |
LL |     for Wrapped(item) in borrow_deref!(iter) {
   |         ^^^^^^^^^^^^^    ------------------- this is an iterator with items of type `&mut i32`
   |         |
   |         expected `i32`, found `Wrapped`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
